--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
                 <div class="position-relative mt-4">
                     <img src="assets/img/portfolio/financedb.jpg" class="img-fluid rounded-4" alt="">
-                    <a href="assets/img/portfolio/fdb1.jpg" class="glightbox play-btn"></a>
+                    <a href="assets/video/financialrep.mp4" class="glightbox play-btn"></a>
                 </div>
                 
                 <div class="portfolio-info">
