--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
                 <div class="position-relative mt-4">
                     <img src="assets/img/portfolio/UIUXDashboard.jpg" class="img-fluid rounded-4" alt="">
-                    <a href="assets/img/portfolio/UIUXDashboard.jpg" class="glightbox play-btn"></a>
+                    <a href="assets/video/PBI_Sales_UIUX.mp4" class="glightbox play-btn"></a>
                 </div>
                 
                 <div class="portfolio-info">
