--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
 
                 <div class="position-relative mt-4">
                     <img src="assets/img/portfolio/pan_card_fraud.png" class="img-fluid rounded-4" alt="">
+                    <a href="assets/video/Untitled video.mp4" class="glightbox play-btn"></a>
                     
                 </div>
                 
