--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+  <!--- Chatbot-->
+
+<script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/06/21/12/20250621124444-MILUR1BG.js"></script>
+
 </head>
 
 <body>
