--- a/index.html
+++ b/index.html
@@ -41,8 +41,20 @@
 
   <!--- Chatbot-->
 
-<script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
-<script src="https://files.bpcontent.cloud/2025/06/21/12/20250621124444-MILUR1BG.js"></script>
+
+
+  <!--<script>
+    window.botpressWebChat.init({
+      host: 'https://cdn.botpress.cloud/webchat/v3.0',
+      botId: 'milur1bg',
+      messagingUrl: 'https://files.bpcontent.cloud/2025/06/21/12/20250621124444-MILUR1BG.js',
+      enableReset: true,
+      enableTranscriptDownload: true,
+      showPoweredBy: false,
+      showConversationsButton: true,
+      showConversationsButtonOnLoad: true,
+    }); 
+  </script> -->
 
 </head>
 
@@ -569,3 +581,5 @@
 </body>
 
 </html>
+<script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/06/21/12/20250621124444-MILUR1BG.js"></script>
